creación header y landing

--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -1,1 +1,13 @@
-<p>header works!</p>
+<header>
+    <div class="headerContainer">
+        <div class="left">
+            <img src="../../../assets/imágenes/Sara Sánchez.png" alt="logo"><a href="logo"></a>
+        </div>
+        <div class="right">
+            <a>Sobre mí</a>
+            <a>Proyectos</a>
+            <a>CV</a>
+            <a>Contáctame</a>
+        </div>
+    </div>
+</header>
