--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -1,1 +1,13 @@
-<p>landing works!</p>
+<div class="landingContainer">
+    <div class="mainContainer">
+        <div class="name">
+            <h1>¡Hola! Soy Sara Sánchez Parra</h1>
+            <p>Desarrolladora de la Tormenta, la que no teme al código, rompedora de barreras digitales, madre de proyectos innovadores, el fuego del Desarrollo Web&App,
+                 Reina de la Programación Front-end y Back-end, Señora de la Lógica y Protectora de la Experiencia del Usuario. Mi objetivo es conquistar el mundo digital y liderar 
+                 el camino hacia un reino tecnológico más brillante. ¡Unidos podemos lograr grandes hazañas en el reino de la programación!</p>
+        </div>
+        <div class="centerImage">
+            <img src="../../../assets/imágenes/khalessi.jpeg" alt="imagenMujer">
+        </div>
+    </div>
+</div>
