--- a/src/app/pages/landing/landing.component.html
+++ b/src/app/pages/landing/landing.component.html
@@ -2,12 +2,27 @@
     <div class="mainContainer">
         <div class="name">
             <h1>¡Hola! Soy Sara Sánchez Parra</h1>
-            <p>Desarrolladora de la Tormenta, la que no teme al código, rompedora de barreras digitales, madre de proyectos innovadores, el fuego del Desarrollo Web&App,
-                 Reina de la Programación Front-end y Back-end, Señora de la Lógica y Protectora de la Experiencia del Usuario. Mi objetivo es conquistar el mundo digital y liderar 
-                 el camino hacia un reino tecnológico más brillante. ¡Unidos podemos lograr grandes hazañas en el reino de la programación!</p>
+            <p>Desarrolladora de la Tormenta, la que no teme al código, rompedora de barreras digitales, madre de
+                proyectos innovadores, el fuego del Desarrollo Web&App,
+                Reina de la Programación Front-end y Back-end, Señora de la Lógica y Protectora de la Experiencia del
+                Usuario. Mi objetivo es conquistar el mundo digital y liderar
+                el camino hacia un reino tecnológico más brillante. ¡Unidos podemos lograr grandes hazañas en el reino
+                de la programación!</p>
         </div>
         <div class="centerImage">
             <img src="../../../assets/imágenes/khalessi.jpeg" alt="imagenMujer">
         </div>
+    </div>
+    <div class="line"></div>
+    
+</div>
+<div class="containerProjects">
+    <div class="projectsMain">
+        <div class="lineProjects"><img src="../../../assets/imágenes/linea.png" alt="line"></div>
+    <div class="projects">MIS ÚLTIMOS PROYECTOS</div>
+    <div class="lineProjects"><img src="../../../assets/imágenes/linea.png" alt="line"></div>
+    </div>
+    <div class="projectCards">
+        <div class="cards"></div>
     </div>
 </div>
