--- a/src/app/pages/landing/landing.component.css
+++ b/src/app/pages/landing/landing.component.css
@@ -36,3 +36,43 @@
     max-width: 500px;
     height: auto;
 }
+
+.line{
+    width: auto;
+    height: 3px;
+    box-shadow: 0px 5px 5px rgba(0, 0, 0, 0.3);
+}
+
+.containerProjects{
+    width: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.projectsMain{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+    justify-content: center;
+}
+
+.lineProjects{
+    width: 20%;
+    height: 150px;
+}
+
+.lineProjects img{
+    width: 100%;
+    height: 100%;
+}
+
+.projects{
+    width: 15%;
+    height: 150px;
+    padding-top: 65px;
+    text-align: center;
+    font-family: 'Nunito', sans-serif;
+    font-weight: bold;
+    color: #733819;
+}
